# apt-management-pilot

./: .dockerignore  .env.dev  .env.postgres.dev  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  settings.sh
.github/workflows/: django.yml
batch/: delete_expired_guest_users.py
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_table.py
common/: models.py  permissions.py
complaints/: admin.py  models.py  serializers.py  urls.py  views.py
complaints/migrations/: 0001_initial.py  0002_alter_complaint_table.py  0002_complaint_current_status.py
config/: __init__.py  asgi.py  celery.py  exceptions.py  pagination.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  develop.py  service.py
contacts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contactnumber_table.py
feeds/: admin.py  helpers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_alter_feed_table.py  0003_alter_feed_options.py
grafana/: dashboard.yaml
houses/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
houses/fixtures/: apartment.json
houses/migrations/: 0001_initial.py  0002_rename_as1_apartment_address_do_and_more.py  0003_alter_apartment_kapt_name.py  0004_alter_apartment_address_do_and_more.py  0005_alter_apartment_table.py  0006_apartment_apartment_kapt_co_654a08_idx.py
medias/: admin.py  models.py  serializers.py
medias/migrations/: 0001_initial.py  0002_alter_photo_table_alter_video_table.py  0003_alter_photo_file.py
nginx/: Dockerfile  nginx.conf
notices/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
notices/migrations/: 0001_initial.py  0002_alter_notice_table.py
polls/: admin.py  models.py  serializers.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_choice_table_alter_question_table.py  0002_choice_description_alter_question_description.py  0003_question_end_date_question_status_alter_choice_votes.py
postgres/: postgresql.conf
prometheus/: prometheus.yml
promtail/: promtail.yml
schedule/: admin.py  models.py  serializers.py  urls.py  views.py
schedule/migrations/: 0001_initial.py  0002_alter_schedule_table.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
(+9 files in other folders)
