[tool.poetry]
name = "apt-management-backend"
version = "0.1.0"
description = ""
authors = ["msm9401 <anstmdals94@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "apt_management_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "4.1"
django-environ = "^0.9.0"
requests = "^2.28.1"
xmltodict = "^0.13.0"
djangorestframework = "^3.14.0"
django-rest-knox = "^4.2.0"
django-cors-headers = "^3.14.0"
black = "^23.1.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
django-redis = "^5.3.0"
django-storages = "^1.13.2"
boto3 = "^1.28.18"
sentry-sdk = "^1.34.0"
django-prometheus = "^2.3.1"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"
django-guest-user = "^0.5.5"
django-celery-beat = "^2.5.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
locust = "^2.15.1"
coverage = "^7.2.7"
colorlog = "^6.7.0"
json-log-formatter = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
